Changed to jdk11. - Fixed an issue in FhirCqlLibraryFileHandler.java loading files from resources in java11. - Java11 changes with dependencies. - Reorganized the pom.xml structure and the parent project.